--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
  <head> 
   <title>1Chat引导页</title> 
-  <meta name="description" content="那些暗潮汹涌的 见不得人的 无法诉之于口的才是我真正的生活|关键词：Suinian,Nianbroken" /> 
+  <meta name="description" content="1Chat引导页" /> 
   <meta charset="utf-8" /> 
    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
 <meta http-equiv="Pragma" content="no-cache">
@@ -71,38 +71,7 @@
   <script src="https://qiniuchat.littlewheat.com/link/assets/js/main.js"></script>
 
   <script>
-	  
-	  
-	  var url = window.location.href;
-	  // 解析 URL，获取参数部分
-	  var searchParams = new URLSearchParams(new URL(url).search);
-	  // 从参数中获取 time 的值
-	  var time = searchParams.get("time");
-	  var waitTime = 2
-	  if(!!time){
-	  	waitTime = parseInt(time)  
-	  }
-	  	  
-	  
-	var Os=document.getElementById("Os");
-	var num=waitTime;
-   var timer=setInterval(function () {
-	if(num>0){
-	  num--;
-	}
-    Os.innerText=num;
-    if(num==0||num < 0){
-	    var rint =Math.floor(Math.random() * 8);
-	if(rint==5){
-		window.location.href = "https://vip7.1ai.ink/chat?ref=1chatInk" ;
-	    }else{
-	        	window.location.href = "https://chat05.a1r.cc" ;
-	//	window.location.href= $("nav ul li a").eq(Math.floor(Math.random() * 3)) .attr("href").replaceAll('11.'//,(40+rint)+'.') ;
-	    }
-	     clearInterval(timer);
-
-    }
-   },1000)
+	  window.location.href = "https://link3.cc/1chat?1ai" ;	   
   </script>
 
   <style>canvas { padding:0; margin:0; }</style> 
