--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
   <script src="https://qiniuchat.littlewheat.com/link/assets/js/main.js"></script>
 
   <script>
-	  window.location.href = "https://link3.cc/1chat?1ai" ;	   
+	  window.location.href = "https://vlink.cc/1chat?1ai" ;	   
   </script>
 
   <style>canvas { padding:0; margin:0; }</style> 
